# pytorch

./: CMakeLists.txt
aten/: CMakeLists.txt
aten/src/ATen/: CMakeLists.txt
aten/src/ATen/native/cuda/: DistributionTemplates.h
caffe2/: CMakeLists.txt
cmake/: Dependencies.cmake  Summary.cmake
cmake/Modules/: FindIntelSYCL.cmake  FindSYCL.cmake  FindSYCLToolkit.cmake
cmake/Modules/FindIntelSYCL/: run_intelsycl.cmake
cmake/Modules/FindSYCL/: run_compile.cmake  run_link.cmake  run_sycl.cmake
cmake/public/: LoadXPU.cmake  xpu.cmake
test/cpp/sycl/: CMakeLists.txt  simple_kernel.cpp  simple_sycl_kernel.cpp  test_simple_sycl_kernel.cpp
